--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "express": "^4.18.1",
     "glob": "^8.0.3",
     "morgan": "^1.10.0",
-    "mysql2-promise": "^0.1.4",
+    "mysql2": "^2.3.3",
     "sequelize": "^6.21.2"
   }
 }
